# trmnl

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.superpowers/brainstorm/59470-1776038425/content/: image-gen-api.html  prompt-style.html
.superpowers/brainstorm/59470-1776038425/state/: server-stopped
docs/plans/: illustration_engine.md
docs/superpowers/plans/: 2026-04-12-fantasy-engine-control-layer.md
docs/superpowers/specs/: 2026-04-12-fantasy-image-engine-design.md
scripts/: convert_illustrations.py  curate_illustrations.py  deploy.sh  fetch_illustration_images.py  test_image_gen.py
src/trmnl/: __init__.py  app.py  carousel.py  cli.py  config.py  control.py  engine.py  generate.py  logo.py  main.py  old_main.py
src/trmnl/engines/: registry.py  router.py
src/trmnl/engines/fantasy/: background_process.py  engine.py  prompts.py
src/trmnl/engines/illustration/: engine.py
src/trmnl/engines/poems/: background_process.py  engine.py  poem.py  process.py
src/trmnl/engines/poems/prompts/: expert.jinja2  forensic.jinja2  route.jinja2
src/trmnl/images/: convert_image.py  system_prompt.jinja2
src/trmnl/poems/: load.py  poem.py
tests/: conftest.py  test_config.py  test_control_api.py  test_fantasy_engine.py  test_illustration_engine.py  test_router.py
