[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trmnl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "conduit",
    "dbclients",
    "fastapi>=0.123.5",
    "httpx>=0.27.0",
    "kagglehub>=0.3.13",
    "levenshtein>=0.27.3",
    "lorem>=0.1.1",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "playwright>=1.56.0",
    "pydantic>=2.12.5",
    "python-levenshtein>=0.27.3",
    "pyyaml>=6.0.0",
    "rich>=14.2.0",
    "uvicorn>=0.38.0",
    "xdg-base-dirs>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/trmnl"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/trmnl/py.typed"]

[tool.uv.sources]
conduit = { path = "../conduit-project", editable = true }
dbclients = { path = "../dbclients-project", editable = true }

[project.scripts]
trmnl = "trmnl.main:main"
trmnl-ctl = "trmnl.cli:main"
